--- a/tonyq/library-manager/templates/service-database.yaml
+++ b/tonyq/library-manager/templates/service-database.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: libba-mysql
 spec:
   type: ClusterIP
   ports:
@@ -9,4 +9,4 @@ spec:
       targetPort: 3306
   clusterIP: None  # headless
   selector:
-    app: mysql
+    app: libba-mysql
