--- a/tonyq/library-manager/values.yaml
+++ b/tonyq/library-manager/values.yaml
@@ -7,6 +7,7 @@ frontend:
     repository: tonyq2k3/libba-frontend
     tag: 0.1.0
   service:
+    url: http://localhost:8080
     port: 80
 
 backend:
