--- a/tonyq/library-manager/templates/configmap.yaml
+++ b/tonyq/library-manager/templates/configmap.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: libba-config
+  name: {{ .Release.Name }}-config
+  namespace: {{ .Release.Namespace }}
 data:
-  LIBBA_FRONTEND_URL: http://localhost:8080 # Check the `Origin` field to determine who's calling (otherwise CORS will block the communication)
-  LIBBA_BACKEND_URL: http://libba-backend
-  LIBBA_DATABASE_URL: jdbc:mysql://libba-mysql:{{ .Values.database.service.port }}/{{ .Values.database.database }}
+  LIBBA_BACKEND_URL: http://{{ .Release.Name }}-backend
+  LIBBA_DATABASE_URL: jdbc:mysql://{{ .Release.Name }}-mysql:{{ .Values.database.service.port }}/{{ .Values.database.database }}
