--- a/tonyq/library-manager/templates/service-backend.yaml
+++ b/tonyq/library-manager/templates/service-backend.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: libba-backend
+  name: {{ .Release.Name }}-backend
+  namespace: {{ .Release.Namespace }}
 spec:
   type: ClusterIP
   ports:
     - port: {{ .Values.backend.service.port }}
       targetPort: 8080
   selector:
-    app: libba-backend
+    app: {{ .Release.Name }}-backend
