--- a/tonyq/library-manager/templates/service-database.yaml
+++ b/tonyq/library-manager/templates/service-database.yaml
@@ -1,7 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: libba-mysql
+  name: {{ .Release.Name }}-mysql
+  namespace: {{ .Release.Namespace }}
 spec:
   type: ClusterIP
   ports:
@@ -9,4 +10,4 @@ spec:
       targetPort: 3306
   clusterIP: None  # headless
   selector:
-    app: libba-mysql
+    app: {{ .Release.Name }}-mysql
