--- a/tonyq/library-manager/templates/service-frontend.yaml
+++ b/tonyq/library-manager/templates/service-frontend.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: libba-frontend
+  name: {{ .Release.Name }}-frontend
+  namespace: {{ .Release.Namespace }}
 spec:
   type: ClusterIP
   ports:
     - port: {{ .Values.frontend.service.port }}
       targetPort: 3000
   selector:
-    app: libba-frontend
+    app: {{ .Release.Name }}-frontend
