--- a/tonyq/library-manager/templates/ingress.yaml
+++ b/tonyq/library-manager/templates/ingress.yaml
@@ -3,13 +3,14 @@ kind: Ingress
 metadata:
   name: {{ .Release.Name }}-ingress
   namespace: {{ .Release.Namespace }}
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   rules:
-  - 
-    http:
+  - http:
       paths:
-      - path: /
+      - path: /libba(/|$)(.*)
         pathType: Prefix
         backend:
           service:
